--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body>
+<body ng-controller="TrackListCtrl">
   <ul class="menu">
-    <li><a href="#/view1">SKIO</a></li>
+    <li><a href="#/view1">SHARE</a></li>
     <li><a href="#/view2">About</a></li>
     <li><a href="#/view3">Contact</a></li>
     <li><a href="#/musicTracks">My Music</a></li>
@@ -19,7 +19,7 @@
     <div ng-view class="view-frame"></div>
   </div>
 
-  <div>SKIO app: v<span app-version></span></div>
+  <div>SHARE app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
