--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body ng-controller="TrackListCtrl">
+<body>
   <ul class="menu">
     <li><a href="#/view1">SHARE</a></li>
     <li><a href="#/view2">About</a></li>
