--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/app.css"/>
+
+  <script type="text/javascript" src="d3/d3.v3.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">SHARE</a></li>
-    <li><a href="#/view2">About</a></li>
-    <li><a href="#/view3">Contact</a></li>
-    <li><a href="#/musicTracks">My Music</a></li>
-  </ul>
-
   <div class="view-container">
-    <div ng-view class="view-frame"></div>
-  </div>
 
-  <div>SHARE app: v<span app-version></span></div>
+    <ul class="menu">
+      <li><a href="#/view1">SHARE</a></li>
+      <li><a href="#/view2">About</a></li>
+      <li><a href="#/view3">Contact</a></li>
+      <li><a href="#/musicTracks">My Music</a></li>
+    </ul>
+
+    
+    <div ng-view class="view-frame"></div>
+    
+    <div>SHARE app: v<span app-version></span></div>
+
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
