--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     
     <div>SHARE app: v<span app-version></span></div>
 
+    <script type="text/javascript">
+            // Your beautiful D3 code will go here
+        </script>
+
   </div>
 
   <!-- In production use:
