--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div>SHARE app: v<span app-version></span></div>
 
     <script type="text/javascript">
-            // Your beautiful D3 code will go here
+            d3.select("body").append("p").text("New paragraph!");
         </script>
 
   </div>
