--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
     <div>SHARE app: v<span app-version></span></div> -->
 
     <script type="text/javascript">
-    var dataset = [ 25, 7, 5, 26, 11, 8, 25, 14, 23, 19,
-                14, 11, 22, 29, 11, 13, 12, 17, 18, 10,
-                24, 18, 25, 9, 3 ];
+
+//Width and height
+var w = 500;
+var h = 50;
+
+    var dataset = [ 5, 10, 15, 20, 25 ];
       
       d3.select("body").selectAll("div")
         .data(dataset)
@@ -38,10 +41,29 @@
           return barHeight + "px";
         });
 
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)   // <-- Here
+            .attr("height", h);
+
+        var circles = svg.selectAll("circle")
+                 .data(dataset)
+                 .enter()
+                 .append("circle");
+
+        circles.attr("cx", function(d, i) {
+            return (i * 50) + 25;
+        })
+        .attr("cy", h/2)
+        .attr("r", function(d) {
+            return d;
+        });
+
 
     </script>
     <svg width="500" height="50">
       <ellipse cx="250" cy="25" rx="100" ry="25"/>
+      <circle cx="25" cy="25" r="22" fill="yellow" stroke="orange" stroke-width="5"/>
     </svg>
 
 
