--- a/index-BAK-01.html
+++ b/index-BAK-01.html
@@ -16,9 +16,9 @@
     <style type="text/css">
 
 html, body, #map {
-  width: 90%;
-  height: 90%;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  margin: 0;
   padding: 0;
 }
 
@@ -61,6 +61,48 @@ html, body, #map {
     
     <div>SHARE app: v<span app-version></span></div>
 
+    <script type="text/javascript">
+
+//Width and height
+var w = 500;
+var h = 50;
+
+    var dataset = [ 5, 10, 15, 20, 25 ];
+      
+      d3.select("body").selectAll("div")
+        .data(dataset)
+        .enter()
+        .append("div")
+        .attr("class", "bar")
+        .style("height", function(d) {
+          var barHeight = d * 6;
+          return barHeight + "px";
+        });
+
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)   // <-- Here
+            .attr("height", h);
+
+        var circles = svg.selectAll("circle")
+                 .data(dataset)
+                 .enter()
+                 .append("circle");
+
+        circles.attr("cx", function(d, i) {
+            return (i * 50) + 25;
+        })
+        .attr("cy", h/2)
+        .attr("r", function(d) {
+            return d;
+        });
+
+
+    </script>
+    <svg width="500" height="50">
+      <ellipse cx="250" cy="25" rx="100" ry="25"/>
+      <circle cx="25" cy="25" r="22" fill="yellow" stroke="orange" stroke-width="5"/>
+    </svg>
 
     <div id="map"></div>
     <script type="text/javascript">
